(Sonar) Fix "`Stream.toList()` should be used instead of `collectors`"